--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gatsby-plugin-netlify-cms": "^4.1.33",
     "gatsby-plugin-offline": "^3.0.30",
     "gatsby-plugin-optimize-svgs": "^1.0.3",
+    "gatsby-plugin-page-creator": "^2.1.37",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-sass": "^2.1.26",
     "gatsby-plugin-sharp": "^2.3.10",
